--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "engine": { "node": "16.11.0", "npm": "8.0.0" }
 }
