--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-genshin-web",
   "engines": {
-    "node": "16.x" 
+    "node": "14.x"
   },
   "version": "0.1.0",
   "private": true,
@@ -22,8 +22,7 @@
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^0.9.5",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^2.1.1"
   }
 }
