--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "my-genshin-web",
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "8.0.0"
   },
   "version": "0.1.0",
   "private": true,
