--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "my-genshin-web",
   "engines": {
-    "node": "14.x",
-    "npm": "8.0.0"
+    "node": "14.x"
   },
   "version": "0.1.0",
   "private": true,
