--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^0.21.3",
     "bootstrap": "^4.6.0",
+    "node-pre-gyp": "^0.17.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
