--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-genshin-web",
   "engines": {
     "node": "14.x",
-    "npm": "6.x"
+    "npm": "8.x"
   },
   "version": "0.1.0",
   "private": true,
@@ -12,12 +12,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.4.1",
     "aos": "^2.3.4",
-    "axios": "^0.21.3",
-    "bootstrap": "^4.6.0",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "node-pre-gyp": "^0.17.0",
+    "npm": "^8.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
