--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
-    "styled-components": "^5.3.0",
-    "webpack": "^5.58.2"
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
