--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "version": "0.1.0",
   "private": true,
+  "homepage": "/build",  
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
