--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "web-vitals": "^2.1.2"
+    "case-sensitive-paths-webpack-plugin": "^2.4.0"
   }
 }
