--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
