--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "aos": "^2.3.4",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "html5-file-selector": "^2.1.0",
     "node-pre-gyp": "^0.17.0",
     "npm": "^8.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
