--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-genshin-web",
   "engines": {
-    "node": "14.x",
-    "npm": "8.x"
+    "node": "16.13.0",
+    "npm": "8.1.3"
   },
   "version": "0.1.0",
   "private": true,
